// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Greeting Component matches snapshot with name 1`] = `
<DocumentFragment>
  <h1>
    Hello, Snapshot!
  </h1>
</DocumentFragment>
`;

exports[`Greeting Component matches snapshot without name 1`] = `
<DocumentFragment>
  <h1>
    Hello, Guest!
  </h1>
</DocumentFragment>
`;
